test/src/e2e_vm_tests/test_programs/should_pass/dca/unused_free_fn/src/main.sw
script;

fn free_fn() {}

fn main() {}