test/src/e2e_vm_tests/test_programs/should_fail/illegal_continue/src/main.sw
script;

fn main() {
    continue;
    while true {
    }
}
